--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ a:visited {
   height: 400px;
 }
 
-#joe-burgess-card {
+/*#joe-burgess-card {
  background-image: url("https://learn-verified.s3.amazonaws.com/joe-burgess.jpeg");
 }
 
@@ -161,9 +161,15 @@ a:visited {
 
 #diane-vu-card {
  background-image: url("https://learn-verified.s3.amazonaws.com/diane-vu.jpg");
+}*/
+
+#marissa-zhong-card {
+ background-image: url("https://imgur.com/lhvRTbw");
 }
 
-
+#marissa-zhong-cover {
+ background-image: url("https://imgur.com/eXyKc7f");
+}
 
 .view-profile-div {
   position: absolute;
