--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ a:visited {
 }
 
 #marissa-zhong-card {
- background-image: url("https://imgur.com/lhvRTbw");
+ background-image: url("https://i.imgur.com/lhvRTbw.jpg");
 }
 
 #marissa-zhong-cover {
