--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ a:visited {
 }
 
 #marissa-zhong-cover {
- background-image: url("https://imgur.com/eXyKc7f");
+ background-image: url("https://i.imgur.com/eXyKc7f.jpg");
 }
 
 .view-profile-div {
