automatically backed up by learn

--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ a:visited {
 }
 
 #marissa-zhong-card {
- background-image: url("https://i.imgur.com/lhvRTbw.jpg");
+ background-image: url("https://i.imgur.com/lhvRTbw.jpg?1");
 }
 
 #marissa-zhong-cover {
