--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,14 @@ a:visited {
  background-image: url("https://learn-verified.s3.amazonaws.com/diane-vu.jpg");
 }
 
+#marissa-zhong-card {
+ background-image: url("https://i.imgur.com/lhvRTbw.jpg?1");
+}
+
+#marissa-zhong-cover {
+ background-image: url("https://i.imgur.com/eXyKc7f.jpg");
+}
+
 .view-profile-div {
   position: absolute;
   bottom: 0;
